--- a/styles/tiles.css
+++ b/styles/tiles.css
@@ -15,17 +15,17 @@
 
 .topMost{
     border-top:0px;
-    border-bottom: 1px solid silver;
+    border-bottom: 3px solid white;
 }
 .rightMost{
     border-right:0px;
-    border-left: 1px solid silver;
+    border-left: 3px solid white;
 }
 .bottomMost{
     border-bottom:0px;
-    border-top: 1px solid silver;
+    border-top: 3px solid white;
 }
 .leftMost{
     border-left:0px;
-    border-right: 1px solid silver;
+    border-right: 3px solid white;
 }
