Allow users to reset points

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,5 @@
 @import url('./tiles.css');
+@import url('./controls.css');
 
 body{
   background-color: black;
@@ -27,16 +28,3 @@ h1{
     left:30%;
 }
 
-#pointsSection{
-  position: absolute;
-  bottom: 1vh;
-  width:50%;
-  margin-left: 25%;
-  height:10%;
-  color:white;
-  display: flex;
-  justify-content: space-around;
-
-  text-align: center;
-  font-size: 2vh;
-}
