--- a/styles/controls.css
+++ b/styles/controls.css
@@ -2,13 +2,15 @@ button{
      opacity: 0.5;
       margin-top: 4vh;
       height: 4vh;
-      width: 5.5vw;
+      width: 6vw;
       cursor: pointer;
       border-radius: 10px;
       background-color: grey;
       color:white;
 }
 button:hover{
+    background-color: black;
+    color: white;
     opacity: 1;
     height:5vh;
     width: 6vw;
